<resources>
    <string name="app_name">My Calci</string>
    <string name="description">description</string>
    <string name="choose_yours">Choose Yours !</string>
    <string name="sip">SIP</string>
    <string name="lumsum">Lumsum</string>
    <string name="cagr">CAGR</string>
    <string name="calculate">&lt; Calculate &gt;</string>
    <string name="time_duration">Time Duration</string>
    <string name="enter_absolute_return">Enter Absolute Return %</string>
    <string name="reset">Reset</string>
    <string name="amount">Amount</string>
    <string name="rate_of_interest">Rate of Interest</string>
    <string name="value">Value</string>
    <string name="initial_free_cash_flow">Initial FCF</string>
    <string name="discount_rate">Discount Rate</string>
    <string name="market_cap">Market Cap</string>
    <string name="current_price">Current Price</string>
    <string name="terminal_rate">Terminal Rate</string>
    <string name="net_debt">Net Debt</string>
    <string name="growth_rate_1_5">Growth Rate(1-5)</string>
    <string name="growth_rate_6_10">Growth Rate(6-10)</string>
    <string name="cash_equivalents">Cash Equivalents</string>
    <string name="margin_of_safety">Margin of Safety</string>
    <string name="my_calci"><u> My Calci </u></string>
    <string name="eps">EPS</string>
    <string name="_10_year_gov_bond_yield">10 Year Gov. Bond Yield</string>
    <string name="dcf">DCF Method</string>
    <string name="benjamin">Benjamin</string>
    <string name="step_up_rate">Step Up Rate</string>
</resources>
