<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="vertical"
    tools:context=".LumsumAct">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/description"
        android:paddingTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lump" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lum_amount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#ccc"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lum_rate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/rate_of_interest"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#ccc"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lum_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/time_duration"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textColorHint="#ccc"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lum_calc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_red"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/calculate"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lum_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/green"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:text="Total Amount :"
        android:textColor="@color/black"
        android:textSize="22sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/lum_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        tools:ignore="HardcodedText" />

</LinearLayout>