<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".Benjamin_Intrinsic">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/description"
        android:scaleType="centerCrop"
        android:src="@drawable/intrinsic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/new_grey"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/benja_eps"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/new_grey"
            android:hint="@string/eps"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/new_grey"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/benja_growth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/new_grey"
            android:hint="@string/growth_rate_1_5"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/new_grey"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/benja_10year_yield"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/new_grey"
            android:hint="@string/_10_year_gov_bond_yield"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/new_grey"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/benja_safety"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/new_grey"
            android:hint="@string/margin_of_safety"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/benja_calc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_orange"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/calculate"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/benja_reset"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="#F6C81D"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:text="Intrinisc Value :"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/benja_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-32dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="32sp"
        tools:ignore="HardcodedText" />

</LinearLayout>