<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context=".Cagr">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/description"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/return_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/new_grey"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cagr_absolute"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/new_grey"
            android:hint="@string/enter_absolute_return"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/new_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cagr_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/new_grey"
            android:hint="@string/time_duration"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textColorHint="#EAEAEA"
            android:textSize="22sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cagr_calc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_blue"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/calculate"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cagr_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/blue"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="Annualised Return"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/cagr_ans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="0 %"
            android:textColor="@color/white"
            android:textSize="32sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>


</LinearLayout>