<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".DCF">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/description"
        android:paddingStart="50dp"
        android:paddingTop="60dp"
        android:paddingEnd="50dp"
        android:paddingBottom="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fair" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/initialFCF"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/initial_free_cash_flow"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="53"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/disc_rate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/discount_rate"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="25"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/marketCap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/market_cap"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="402"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currentPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/current_price"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="396"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/growthRate1to5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/growth_rate_1_5"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="12"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/growthRate6to10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/growth_rate_6_10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="12"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/terminalRate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/terminal_rate"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="2"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/debt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/net_debt"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:text="26"
                android:textColor="@color/black"
                android:textColorHint="#ccc"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/dcf_calci"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_dcf_blue"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/calculate"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dcf_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="#79cbdb"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="start"
        android:text="Intrinsic Value :"
        android:textColor="@color/black"
        android:textSize="22sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/dcf_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        tools:ignore="HardcodedText" />

</LinearLayout>

